col-xs-offset-1 //10

--- a/www/index.html
+++ b/www/index.html
@@ -16,12 +16,13 @@
 	<a class="admin">Admin</a>
 		<div class="container">
 		<div class="row header">
-				<div class="col-md-offset-2 col-md-8 text-center">
-					<h1>Загогогоогогогоголовок</h1>
+				<div class="col-md-offset-2 col-md-8 col-xs-offset-1 
+				col-xs-10 text-center">
+					<h1>Заголовок</h1>
 				</div>
 			</div>
 			<div class="row degustation">
-				<div class="col-md-offset-2 col-md-8 text-center">
+				<div class="col-md-offset-2 col-md-8 col-xs-offset-1 col-xs-10 text-center">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem enim repellendus aliquam voluptates quam, error corporis deleniti quo tenetur assumenda ea, excepturi nobis explicabo? Nostrum dignissimos animi eligendi id totam.</p>
 					<button class="btn">Дегустация</button>
 				</div>
