--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
 		<div class="row header">
 				<div class="col-md-offset-2 col-md-8 col-xs-offset-1 
 				col-xs-10 text-center">
-					<h1>Заголовок</h1>
+					<h1>Заголловок</h1>
 				</div>
 			</div>
 			<div class="row degustation">
