--- a/www/index.html
+++ b/www/index.html
@@ -7,26 +7,35 @@
 	<link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
  	<link rel="stylesheet" href="css/fonts.css" />
-	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="css/main-page.css" />
   <script src="libs/jquery/jquery-2.1.4.min.js"></script>
 	<script src="libs/angular.js"></script>
 	<script src="js/common.js"></script>
 </head>
 <body>
-	<a class="admin">Admin</a>
-		<div class="container">
-		<div class="row header">
-				<div class="col-md-offset-2 col-md-8 col-xs-offset-1 
-				col-xs-10 text-center">
+
+	<div class="bg">			
+		
+		<div class="container">		
+		<a class="smoothly" href="admin.html">Администратор</a>
+		<div class="vertical-align"	>
+			<div class="row header">			
+				<div class="col-md-12 col-xs-offset-0 col-xs-12 text-center">					
 					<h1>Дегустация</h1>
+					<p>коньяков</p>
 				</div>
 			</div>
 			<div class="row degustation">
 				<div class="col-md-offset-2 col-md-8 col-xs-offset-1 col-xs-10 text-center">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem enim repellendus aliquam voluptates quam, error corporis deleniti quo tenetur assumenda ea, excepturi nobis explicabo? Nostrum dignissimos animi eligendi id totam.</p>
-					<button class="btn">Дегустация</button>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem enim repellendus aliquam voluptates quam, error corporis deleniti quo tenetur assumenda ea, excepturi nobis explicabo? Nostrum dignissimos animi eligendi id totam.					
+					</p>
+					<button class="start-btn smoothly" onClick='location.href="taster.html"'>
+					Начать дегустацию
+					</button>
 				</div>
-			</div>
+			</div>		
+		</div>	
 		</div>
+	</div>
 </body>
 </html>
