--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,7 @@
 			</div>
 			<div class="row degustation">
 				<div class="col-md-offset-2 col-md-8 col-xs-offset-1 col-xs-10 text-center">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem enim repellendus aliquam voluptates quam, error corporis deleniti quo tenetur assumenda ea, excepturi nobis explicabo? Nostrum dignissimos animi eligendi id totam.					
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem enim repellendus aliquam voluptates quam, error corporis deleniti quo tenetur.					
 					</p>
 					<button class="start-btn smoothly" onClick='location.href="taster.html"'>
 					Начать дегустацию
