--- a/www/tmpl/formgroup.html
+++ b/www/tmpl/formgroup.html
@@ -4,18 +4,20 @@
 <p>Возраст: {{age}}</p>
 <input type="hidden" name="code{{@index}}" value="{{code}}">
 <input type="hidden" name="age{{@index}}" value="{{age}}">
-<span>Прозрачность</span>
-<input type="number" step="0.05" min="0" max="0.5">
-<span>Цвет</span>
-<input type="number" step="0.05" min="0" max="0.5">
-<span>Вкус</span>
-<input type="number" step="0.05" min="0" max="3.0">
-<span>Букет</span>
-<input type="number" step="0.05" min="0" max="5.0">
-<span>Типичность</span>
-<input type="number" step="0.05" min="0" max="1.0">
-<span>Примечание</span>
-<input type="text">
+<div class="cellrate"><label>Прозрачность</label>
+<input type="number" name="opacity{{@index}}" step="0.05" min="0" max="0.5"></div>
+<div class="cellrate"><label>Цвет</label>
+<input type="number" name="color{{@index}}" step="0.05" min="0" max="0.5"></div>
+<div class="cellrate"><label>Вкус</label>
+<input type="number" name="taste{{@index}}" step="0.05" min="0" max="3.0"></div>
+<div class="cellrate"><label>Букет</label>
+<input type="number" name="bouquet{{@index}}" step="0.05" min="0" max="5.0"></div>
+<div class="cellrate"><label>Типичность</label>
+<input type="number" name="typicality{{@index}}" step="0.05" min="0" max="1.0"></div>
+<div class="cellrate"><label>Примечание</label><input type="text" name="note{{@index}}"></div>
+<p>Общий балл: <span class="main"></span></p>
+
 </div>
 {{/data}}
+
 
