--- a/www/taster1.html
+++ b/www/taster1.html
@@ -28,7 +28,7 @@
 					<div class="vibortext"><h1>CHOOSE YOUR NAME</h1>
 					<!--<p>свое имя и фамилию из списка</p>-->
 					</div>
-					<button class="choose-send smoothly" name="StartDeg" id="start-degustation">
+					<button class="choose-send smoothly" name="StartDeg" style="font-style: italic;" id="start-degustation">
 					Выбрать имя
 					</button>
 					<form method="POST" action="taster.php" class="formgroup" id="form">
@@ -36,27 +36,32 @@
 					</div>
 					<div class="taster">
 					</div>
+					
 					<nav class="cognacgroup">
 						<ul>
-							<li><p>A</p></li>
-							<li><p>B</p></li>
-							<li><p>C</p></li>
-							<li><p>D</p></li>
-							<li><p>E</p></li>
-							<li><p>F</p></li>
-							<li><p>G</p></li>
-							<li><p>K</p></li>
+							<li class="smoothly"><p>A</p></li>
+							<li class="smoothly"><p>B</p></li>
+							<li class="smoothly"><p>C</p></li>
+							<li class="smoothly"><p>D</p></li>
+							<li class="smoothly"><p>E</p></li>
+							<li class="smoothly"><p>F</p></li>
+							<li class="smoothly"><p>G</p></li>
+							<li class="smoothly"><p>K</p></li>
 					</ul>
-					</nav>					
+					</nav>	
+					<hr>				
 					<div id="group" class="group">
 						<div class="rowrate">
-							<p>Код коньяка: {{code}}</p>
-							<p>Возраст: {{age}}</p>
+							<div class="cellrate cognac cognac1">
+								<span>Код коньяка: {{code}}</span><br>
+								<span>Возраст: {{age}}</span>
+							</div>
+							<div class="cellrate" style="height: 20px;"></div>
 							<!--<input type="hidden" name='code{{index}}' value="{{code}}">
 							<input type="hidden" name="age{{index}}" value="{{age}}">-->
 							<input type="hidden" name="id{{index}}" value="{{id}}">
 							<div class="cellrate"><label>Прозрачность</label>
-							<input type="number" name="opacity{{index}}" step="0.05" min="0" max="0.5" value="0"><span>До 0.5</span></div>
+							<input type="number" name="opacity{{index}}" step="0.05" min="0" max="0.5" placeholder="0"><span>До 0.5</span></div>
 							<div class="cellrate"><label>Цвет</label>
 							<input type="number" name="color{{index}}" step="0.05" min="0" max="0.5" value="0"><span>До 0.5</span></div>
 							<div class="cellrate"><label>Вкус</label>
@@ -64,11 +69,22 @@
 							<div class="cellrate"><label>Букет</label>
 							<input type="number" name="bouquet{{index}}" step="0.05" min="0" max="5.0" value="0"><span>До 5.0</span></div>
 							<div class="cellrate"><label>Типичность</label>
-							<input type="number" name="typicality{{index}}" step="0.05" min="0" max="1.0" value="0"><span>До 1.0</span></div>
-							<div class="cellrate"><label>Примечание</label><input type="text" name="note{{index}}"></div>
-							<p>Общий балл: <span class="main" name="main{{index}}">0</span>
+							<input type="number" name="typicality{{index}}" step="0.05" min="0" max="1.0" value="0" ><span>До 1.0</span></div>
+							<div class="cellrate"><input type="text" class="textinput" placeholder="Примечание" name="note{{index}}"></div>
+							<div class="cellrate" style="height: 20px;"></div>
+							<div class="cellrate cognac">
+							<p>Общий балл:<input type="button" class="main" name="main{{index}}" value="9,98" 
+							style="
+	height: 55px;
+	width: 55px;
+	background-color: #ed5650;
+	border-radius: 30px;
+	color: #fff;
+	margin-left: 20px; font-size: 16px; border:none;"></span>
 							<input type="hidden" value="0" name="mainpoint{{index}}"></p>
+							</div>
 						</div>
+						<hr>
 						<div class="rowrate">
 							<p>Код коньяка: {{code}}</p>
 							<p>Возраст: {{age}}</p>
@@ -90,7 +106,8 @@
 							<input type="hidden" value="0" name="mainpoint{{index}}"></p>
 						</div>
 					</div>
-					<button type="submit">Закрепить изменения</button>
+					<div class="cellrate" style="height: 40px;"></div>					
+					<button class="submit-cognac" type="submit">Закрепить изменения</button>
 				</form>
 					<?php include_once 'php/secure-insert.php' ?>
 				</div><!-- end of col-md-->
