--- a/www/taster1.html
+++ b/www/taster1.html
@@ -56,7 +56,6 @@
 								<span>Код коньяка: {{code}}</span><br>
 								<span>Возраст: {{age}}</span>
 							</div>
-							<div class="cellrate" style="height: 20px;"></div>
 							<!--<input type="hidden" name='code{{index}}' value="{{code}}">
 							<input type="hidden" name="age{{index}}" value="{{age}}">-->
 							<input type="hidden" name="id{{index}}" value="{{id}}">
@@ -73,14 +72,7 @@
 							<div class="cellrate"><input type="text" class="textinput" placeholder="Примечание" name="note{{index}}"></div>
 							<div class="cellrate" style="height: 20px;"></div>
 							<div class="cellrate cognac">
-							<p>Общий балл:<input type="button" class="main" name="main{{index}}" value="9,98" 
-							style="
-	height: 55px;
-	width: 55px;
-	background-color: #ed5650;
-	border-radius: 30px;
-	color: #fff;
-	margin-left: 20px; font-size: 16px; border:none;"></span>
+							<p>Общий балл:<input type="button" class="main" name="main{{index}}" value="9,98" ></span>
 							<input type="hidden" value="0" name="mainpoint{{index}}"></p>
 							</div>
 						</div>
