--- a/www/tmpl/formgroup.html
+++ b/www/tmpl/formgroup.html
@@ -18,7 +18,7 @@
 <input type="number" name="bouquet{{index}}" step="0.01" min="0" max="5.0" value="0"><span>До 5.0</span></div>
 <div class="cellrate"><label>Типичность</label>
 <input type="number" name="typicality{{index}}" step="0.01" min="0" max="1.0" value="0"><span>До 1.0</span></div>
-<div class="cellrate"><input type="text" name="note{{index}}" placeholder="Прмечание"></div>
+<div class="cellrate"><input type="text" name="note{{index}}" placeholder="Примечание"></div>
 	<p>Общий балл: <input type="button" class="res-button main" name="main{{index}}" value="0">
 	<input type="hidden" value="0" name="mainpoint{{index}}"></p>
 </div>
