--- a/www/tmpl/formgroup.html
+++ b/www/tmpl/formgroup.html
@@ -9,17 +9,17 @@
 <input type="hidden" name="age{{index}}" value="{{age}}">-->
 <input type="hidden" name="id{{index}}" value="{{id}}">
 <div class="cellrate"><label>Прозрачность</label>
-<input type="number" name="opacity{{index}}" step="0.01" min="0" max="0.5" value="0"><span>До 0.5</span></div>
+<input type="number" name="opacity{{index}}" step="0.01" min="0" max="0.5" placeholder="0"><span>До 0.5</span></div>
 <div class="cellrate"><label>Цвет</label>
-<input type="number" name="color{{index}}" step="0.01" min="0" max="0.5" value="0"><span>До 0.5</span></div>
+<input type="number" name="color{{index}}" step="0.01" min="0" max="0.5" placeholder="0"><span>До 0.5</span></div>
 <div class="cellrate"><label>Вкус</label>
-<input type="number" name="taste{{index}}" step="0.01" min="0" max="3.0" value="0"><span>До 3.0</span></div>
+<input type="number" name="taste{{index}}" step="0.01" min="0" max="3.0" placeholder="0"><span>До 3.0</span></div>
 <div class="cellrate"><label>Букет</label>
-<input type="number" name="bouquet{{index}}" step="0.01" min="0" max="5.0" value="0"><span>До 5.0</span></div>
+<input type="number" name="bouquet{{index}}" step="0.01" min="0" max="5.0" placeholder="0"><span>До 5.0</span></div>
 <div class="cellrate"><label>Типичность</label>
-<input type="number" name="typicality{{index}}" step="0.01" min="0" max="1.0" value="0"><span>До 1.0</span></div>
+<input type="number" name="typicality{{index}}" step="0.01" min="0" max="1.0" placeholder="0"><span>До 1.0</span></div>
 <div class="cellrate"><input type="text" name="note{{index}}" placeholder="Примечание"></div>
-	<p>Общий балл: <input type="button" class="res-button main" name="main{{index}}" value="0">
+	<p>Общий балл: <input type="button" class="res-button main" name="main{{index}}" placeholder="0">
 	<input type="hidden" value="0" name="mainpoint{{index}}"></p>
 </div>
 {{/data}}
