--- a/www/reports/Brochure.html
+++ b/www/reports/Brochure.html
@@ -19,10 +19,5 @@
 	</header>
 	<div class="simple_table"><table border="1" style="width:100%;">
 	
-<th>COGNAC_TITLE</th><th>GROUP_ID</th><tr><td>&#1050;&#1086;&#1085;&#1100;&#1103;&#1082; &#1059;&#1082;&#1088;&#1072;&#1080;&#1085;&#1099; &quot;&#1064;&#1072;&#1073;&#1086; V.S&quot;</td><td>61</td></tr>
-<tr><td>&#1050;&#1086;&#1085;&#1100;&#1103;&#1082; &quot;&#1041;&#1091;&#1082;&#1077;&#1090; &#1052;&#1086;&#1083;&#1076;&#1072;&#1074;&#1080;&#1080;&quot;</td><td>61</td></tr>
-<tr><td>&#1041;&#1088;&#1077;&#1085;&#1076;&#1080; &quot;&#1060;&#1088;&#1072;&#1085;&#1094;&#1091;&#1079; V.S.&quot;</td><td>61</td></tr>
-<tr><td>&#1050;&#1086;&#1085;&#1100;&#1103;&#1082; &#1059;&#1082;&#1088;&#1072;&#1080;&#1085;&#1099; &quot;3 &#1079;&#1074;&#1077;&#1079;&#1076;&#1086;&#1095;&#1082;&#1080; VS&quot;</td><td>61</td></tr>
-<tr><td>&#1050;&#1086;&#1085;&#1100;&#1103;&#1082; &#1059;&#1082;&#1088;&#1072;&#1080;&#1085;&#1099; &#1058;&#1052; &quot;OK&#039;VIN&quot; 3 &#1079;&#1074;&#1077;&#1079;&#1076;&#1086;&#1095;&#1082;&#1080;</td><td>61</td></tr>
-</table></div>
+</div>
 </html></body>
