--- a/www/reports/report1.html
+++ b/www/reports/report1.html
@@ -11,11 +11,55 @@
 		body{
 			font-family: 'Arialuni','Arial',sans-serif;
 		}
+		table th{
+			font-size: 12px;
+			text-align:center;
+		}
+		table td{
+			padding:0 2px;
+		}
+		table tr td:first-child{
+			width: 3%;
+			text-align:center;
+		}
+		table tr td:nth-child(2){
+			width: 24%;/*28*/
+		}
+		table tr td:nth-child(3){
+			width: 5%;/*33*/
+			text-align:center;
+		}
+		table tr td:nth-child(4){
+			width: 20%;/*53*/
+		}
+		table tr td:nth-child(5){
+			width: 22%;/*78*/
+		}
+		table tr td:nth-child(6){
+			width: 6%;/*82*/
+			text-align:center;
+		}
+		table tr td:nth-child(7){
+			width: 5%;
+			text-align:center;
+		}
+		table tr td:nth-child(8){
+			width: 5%;
+			text-align:center;
+		}
+		table tr td:nth-child(9){
+			width: 10%;
+		}
+		.simple_table p{
+			text-align: center;
+			font-weight: bold;
+			margin-top: 20px;
+		}
   </style>
 </head>
 <body>
 	<header>
 	<div style="width:600px; margin:0 auto; text-align: center;"><p><span>СПИСОК ОБРАЗЦОВ</span><br>представленных на Международном Конкурсе коньяков<br> "KVINT 2017" г. Тирасполь</p></div>
 	</header>
-	<div class="simple_table"><table border="1" style="width:100%;">
+	<div class="simple_table">
 	
