--- a/www/reports/report_1.html
+++ b/www/reports/report_1.html
@@ -7,6 +7,11 @@
 	<!--<link rel="stylesheet" type="text/css" href="../css/report-page.css">-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <script src="../libs/jquery/jquery-2.1.4.min.js"></script>
+    <script type="text/javascript">
+  		$(function() {
+  			window.print();
+  		})
+  </script>
   <style type="text/css">
 		body{
 			font-family: 'Arialuni','Arial',sans-serif;
