--- a/www/reports/report_2.html
+++ b/www/reports/report_2.html
@@ -7,11 +7,6 @@
 	<!--<link rel="stylesheet" type="text/css" href="../css/report-page.css">-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <script src="../libs/jquery/jquery-2.1.4.min.js"></script>
-    <script type="text/javascript">
-  		$(function() {
-  			window.print();
-  		})
-  </script>
   <style type="text/css">
 		body{
 			font-family: 'Arialuni','Arial',sans-serif;
@@ -19,41 +14,6 @@
 		table th{
 			font-size: 12px;
 			text-align:center;
-		}
-		table td{
-			padding:0 2px;
-		}
-		table tr td:first-child{
-			width: 3%;
-			text-align:center;
-		}
-		table tr td:nth-child(2){
-			width: 24%;/*28*/
-		}
-		table tr td:nth-child(3){
-			width: 5%;/*33*/
-			text-align:center;
-		}
-		table tr td:nth-child(4){
-			width: 20%;/*53*/
-		}
-		table tr td:nth-child(5){
-			width: 22%;/*78*/
-		}
-		table tr td:nth-child(6){
-			width: 6%;/*82*/
-			text-align:center;
-		}
-		table tr td:nth-child(7){
-			width: 5%;
-			text-align:center;
-		}
-		table tr td:nth-child(8){
-			width: 5%;
-			text-align:center;
-		}
-		table tr td:nth-child(9){
-			width: 10%;
 		}
 		.simple_table p{
 			text-align: center;
@@ -76,3 +36,5 @@
 	</header>
 	<div class="simple_table">
 	
+<table border="1" style="width:100%;"></table></div>
+</html></body>
