--- a/www/reports/report_7.html
+++ b/www/reports/report_7.html
@@ -7,10 +7,57 @@
 	<!--<link rel="stylesheet" type="text/css" href="../css/report-page.css">-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <script src="../libs/jquery/jquery-2.1.4.min.js"></script>
+  <script type="text/javascript">
+  		$(function() {
+  			window.print();
+  		})
+  </script>
   <style type="text/css">
 		body{
 			font-family: 'Arialuni','Arial',sans-serif;
 		}
+		table th{
+			font-size: 12px;
+			text-align:center;
+		}
+		table td{
+			padding:0 2px;
+		}
+		table tr td:first-child{
+			width: 2%;
+			text-align:center;
+		}
+		table tr td:nth-child(2){
+			width: 2%;
+			text-align:center;
+		}
+		table tr td:nth-child(3){
+			width: 20%;
+		}
+		table tr td:nth-child(4){
+			width: 23%;/*53*/
+		}
+		table tr td:nth-child(5){
+			width: 4%;/*78*/
+			text-align:center;
+		}
+		table tr td:nth-child(6){
+			width: 10%;/*82*/
+			text-align:center;
+		}		
+		.simple_table p{
+			text-align: center;
+			font-weight: bold;
+			margin-top: 20px;
+		}
+		@media print {
+    table {
+     page-break-after: always;
+    } 
+    table tr {
+    	 page-break-after: auto;
+    }
+   } 
   </style>
 </head>
 <body>
