--- a/www/reports/report2.html
+++ b/www/reports/report2.html
@@ -9,7 +9,7 @@
   <script src="../libs/jquery/jquery-2.1.4.min.js"></script>
   <script type="text/javascript">
   		$(function() {
-  			window.print();
+  			//window.print();
   		})
   </script>
   <style type="text/css">
@@ -18,6 +18,9 @@
 		}
 		table th{
 			font-size: 12px;
+			text-align:center;
+		}
+		table td{
 			text-align:center;
 		}
 		.simple_table p{
@@ -36,8 +39,5 @@
   </style>
 </head>
 <body>
-	<header>
-	<div style="width:600px; margin:0 auto; text-align: center;"><p><span>СПИСОК ОБРАЗЦОВ</span><br>представленных на Международном Конкурсе коньяков<br> "KVINT 2017" г. Тирасполь</p></div>
-	</header>
 	<div class="simple_table">
 	
