--- a/www/reports/report5.html
+++ b/www/reports/report5.html
@@ -11,6 +11,73 @@
 		body{
 			font-family: 'Arialuni','Arial',sans-serif;
 		}
+	
+		table th{
+			font-size: 12px;
+			text-align:center;
+		}
+		table td{
+			padding: 2px 5px;
+		}
+		table th{
+			padding: 5px 5px;
+		}
+		table tr td:first-child{
+			width: 2%;
+			text-align:center;
+		}
+		table tr td:nth-child(2){
+			width: 8%;
+			text-align:center;
+		}
+		table tr td:nth-child(3){
+			width: 6%;
+			
+		}
+		table tr td:nth-child(4){
+			width: 10%;
+		}
+		table tr td:nth-child(5){
+			width: 20%;
+			text-align:center;
+		}
+		table tr td:nth-child(6){
+			width: 6%;
+			text-align:center;
+		}
+		table tr td:nth-child(7){
+			width: 6%;
+			text-align:center;
+		}
+		table tr td:nth-child(8){
+			width: 6%;
+			text-align:center;
+		}
+		.simple_table p{
+			text-align: center;
+			font-weight: bold;
+			margin: 0 auto;
+		}
+		p{
+			margin-bottom: 5px !important;
+		}
+		p.last{
+			margin-bottom: 15px !important;
+		}
+		p.first{
+			margin-top: 25px;
+		}
+	@media print {
+    table {
+     page-break-after: always;
+    } 
+        table tbody tr td:before,
+    table tbody tr td:after {
+        content : "" ;
+        height : 4px ;
+        display : block ;
+    }
+  }
   </style>
 </head>
 <body>
