--- a/www/reports/report_5.html
+++ b/www/reports/report_5.html
@@ -11,6 +11,65 @@
 		body{
 			font-family: 'Arialuni','Arial',sans-serif;
 		}
+	
+		table th{
+			font-size: 12px;
+			text-align:center;
+		}
+		table td{
+			padding: 2px 5px;
+		}
+		table th{
+			padding: 5px 5px;
+		}
+		table tr td:first-child{
+			width: 5%;
+			text-align:center;
+		}
+		table tr td:nth-child(2){
+			width: 10%;
+			text-align:center;
+		}
+		table tr td:nth-child(3){
+			width: 30%;
+			
+		}
+		table tr td:nth-child(4){
+			width: 30%;
+		}
+		table tr td:nth-child(5){
+			width: 10%;
+			text-align:center;
+		}
+		table tr td:nth-child(6){
+			width: 15%;
+			text-align:center;
+		}
+		.simple_table p{
+			text-align: center;
+			font-weight: bold;
+			margin: 0 auto;
+		}
+		p{
+			margin-bottom: 5px !important;
+		}
+		p.last{
+			margin-bottom: 15px !important;
+		}
+		p.first{
+			margin-top: 25px;
+		}
+	@media print {
+    table {
+     page-break-after: always;
+    } 
+        table tbody tr td:before,
+    table tbody tr td:after {
+        content : "" ;
+        height : 4px ;
+        display : block ;
+    }
+  }
   </style>
 </head>
 <body>
@@ -19,5 +78,5 @@
 	</header>
 	<div class="simple_table"><table border="1" style="width:100%;">
 	
-<p>Секция C - Ординарные коньяки(Дивины) возраста 5 лет</p><table border="1" style="width:100%;"><th>№</th><th>COGNAC_CODE</th><th>CNT0</th><th>AVG0</th><th>PRIZE_TITLE</th><th>CNT1</th><th>AVG1</th><th>PRIZE_TITLE</th><tr><td>1</td><td>C001</td><td>11</td><td>8.69</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td><td>9</td><td>8.67</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td></tr><tr><td>2</td><td>C002</td><td>11</td><td>8.65</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td><td>9</td><td>8.65</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td></tr><tr><td>3</td><td>C003</td><td>11</td><td>8.67</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td><td>9</td><td>8.68</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td></tr><tr><td>4</td><td>C004</td><td>11</td><td>8.64</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td><td>9</td><td>8.66</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td></tr><tr><td>5</td><td>C006</td><td>11</td><td>8.67</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td><td>9</td><td>8.67</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td></tr><tr><td>6</td><td>C007</td><td>11</td><td>8.5</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td><td>9</td><td>8.49</td><td>&#1041;&#1088;&#1086;&#1085;&#1079;&#1086;&#1074;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td></tr><tr><td>7</td><td>C008</td><td>11</td><td>8.69</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td><td>9</td><td>8.67</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td></tr><tr><td>8</td><td>C009</td><td>11</td><td>8.67</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td><td>9</td><td>8.66</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td></tr><tr><td>9</td><td>C010</td><td>11</td><td>8.64</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td><td>9</td><td>8.63</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td></tr><tr><td>10</td><td>C013</td><td>11</td><td>8.69</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td><td>9</td><td>8.68</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td></tr><tr><td>11</td><td>C014</td><td>11</td><td>8.75</td><td>&#1047;&#1086;&#1083;&#1086;&#1090;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td><td>9</td><td>8.73</td><td>&#1047;&#1086;&#1083;&#1086;&#1090;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td></tr></table></div>
+<p>Секция А - Ординарные коньяки(Дивины) возраста 3 года</p><table border="1" style="width:100%;"><th>№</th><th>COGNAC_CODE</th><th>CNT0</th><th>AVG0</th><th>PRIZE_TITLE</th><th>CNT1</th><th>AVG1</th><th>PRIZE_TITLE</th><tr><td>1</td><td>A001</td><td>11</td><td>8.59</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td><td>9</td><td>8.6</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td></tr><tr><td>2</td><td>A002</td><td>11</td><td>8.54</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td><td>9</td><td>8.55</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td></tr><tr><td>3</td><td>A003</td><td>11</td><td>8.64</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td><td>9</td><td>8.65</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td></tr><tr><td>4</td><td>A006</td><td>11</td><td>8.59</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td><td>9</td><td>8.59</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td></tr></table></div>
 </html></body>
