--- a/www/reports/report_5.html
+++ b/www/reports/report_5.html
@@ -23,26 +23,35 @@
 			padding: 5px 5px;
 		}
 		table tr td:first-child{
-			width: 5%;
+			width: 2%;
 			text-align:center;
 		}
 		table tr td:nth-child(2){
-			width: 10%;
+			width: 8%;
 			text-align:center;
 		}
 		table tr td:nth-child(3){
-			width: 30%;
-			
-		}
-		table tr td:nth-child(4){
-			width: 30%;
-		}
-		table tr td:nth-child(5){
 			width: 10%;
 			text-align:center;
 		}
+		table tr td:nth-child(4){
+			width: 10%;
+			text-align:center;
+		}
+		table tr td:nth-child(5){
+			width: 25%;
+			text-align:center;
+		}
 		table tr td:nth-child(6){
-			width: 15%;
+			width: 10%;
+			text-align:center;
+		}
+		table tr td:nth-child(7){
+			width: 10%;
+			text-align:center;
+		}
+		table tr td:nth-child(8){
+			width: 25%;
 			text-align:center;
 		}
 		.simple_table p{
@@ -55,6 +64,7 @@
 		}
 		p.last{
 			margin-bottom: 15px !important;
+			margin-top: 15px !important;
 		}
 		p.first{
 			margin-top: 25px;
@@ -73,10 +83,8 @@
   </style>
 </head>
 <body>
-	<header>
-	<div style="width:600px; margin:0 auto; text-align: center;"><p><span>СПИСОК ОБРАЗЦОВ</span><br>представленных на Международном Конкурсе коньяков<br> "KVINT 2017" г. Тирасполь</p></div>
-	</header>
-	<div class="simple_table"><table border="1" style="width:100%;">
+	<div class="simple_table">
 	
-<p>Секция А - Ординарные коньяки(Дивины) возраста 3 года</p><table border="1" style="width:100%;"><th>№</th><th>COGNAC_CODE</th><th>CNT0</th><th>AVG0</th><th>PRIZE_TITLE</th><th>CNT1</th><th>AVG1</th><th>PRIZE_TITLE</th><tr><td>1</td><td>A001</td><td>11</td><td>8.59</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td><td>9</td><td>8.6</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td></tr><tr><td>2</td><td>A002</td><td>11</td><td>8.54</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td><td>9</td><td>8.55</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td></tr><tr><td>3</td><td>A003</td><td>11</td><td>8.64</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td><td>9</td><td>8.65</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td></tr><tr><td>4</td><td>A006</td><td>11</td><td>8.59</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td><td>9</td><td>8.59</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td></tr></table></div>
+<div class="simple_table">
+<div style="width:600px; margin:0 auto; text-align: center;"><p class="first">РЕЗУЛЬТАТЫ МЕЖДУНАРОДНОГО КОНКУРСА КОНЬЯКОВ</p><p>"KVINT - 2012" г. Тирасполь</p><p>Итоговоя таблица результатов дегустации</p></div><p class="last"> Группа: Секция А - Ординарные коньяки(Дивины) возраста 3 года</p><table border="1" style="width:100%;"><th>№</th><th>Шифр</th><th>Количество</th><th>Средний балл</th><th>Награда</th><th>CNT1</th><th>AVG1</th><th>PRIZE_TITLE</th><tr><td>1</td><td>A001</td><td>11</td><td>8.59</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td><td>9</td><td>8.6</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td></tr><tr><td>2</td><td>A002</td><td>11</td><td>8.54</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td><td>9</td><td>8.55</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td></tr><tr><td>3</td><td>A003</td><td>11</td><td>8.64</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td><td>9</td><td>8.65</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td></tr><tr><td>4</td><td>A006</td><td>11</td><td>8.59</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td><td>9</td><td>8.59</td><td>&#1057;&#1077;&#1088;&#1077;&#1073;&#1088;&#1103;&#1085;&#1072;&#1103; &#1084;&#1077;&#1076;&#1072;&#1083;&#1100;</td></tr></table></div>
 </html></body>
