--- a/www/reports/report5.html
+++ b/www/reports/report5.html
@@ -31,26 +31,27 @@
 			text-align:center;
 		}
 		table tr td:nth-child(3){
-			width: 6%;
-			
+			width: 10%;
+			text-align:center;
 		}
 		table tr td:nth-child(4){
 			width: 10%;
+			text-align:center;
 		}
 		table tr td:nth-child(5){
-			width: 20%;
+			width: 25%;
 			text-align:center;
 		}
 		table tr td:nth-child(6){
-			width: 6%;
+			width: 10%;
 			text-align:center;
 		}
 		table tr td:nth-child(7){
-			width: 6%;
+			width: 10%;
 			text-align:center;
 		}
 		table tr td:nth-child(8){
-			width: 6%;
+			width: 25%;
 			text-align:center;
 		}
 		.simple_table p{
@@ -63,6 +64,7 @@
 		}
 		p.last{
 			margin-bottom: 15px !important;
+			margin-top: 15px !important;
 		}
 		p.first{
 			margin-top: 25px;
