--- a/www/tmpl/formgroup.html
+++ b/www/tmpl/formgroup.html
@@ -19,7 +19,7 @@
 <div class="cellrate"><label>Типичность</label>
 <input type="number" name="typicality{{index}}" step="0.01" min="0" max="1.0" placeholder="0"><span>До 1.0</span></div>
 <div class="cellrate"><input type="text" name="note{{index}}" placeholder="Примечание"></div>
-	<p>Общий балл: <input type="button" class="res-button main" name="main{{index}}" placeholder="0">
+	<p>Общий балл: <input type="button" class="res-button main" name="main{{index}}" value="0">
 	<input type="hidden" value="0" name="mainpoint{{index}}"></p>
 </div>
 {{/data}}
